[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "rpmautospec-koji"
version = "0.4.0"
description = "Koji plugin for rpmautospec"
authors = ["Nils Philippsen <nils@redhat.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/fedora-infra/rpmautospec-koji"
packages = [
    { include = "rpmautospec_koji/**/*.py" },
]
include = [
    { path = "DCO.txt", format = "sdist" },
    { path = "tests/**/*.py", format = "sdist" },
    { path = "tox.ini", format = "sdist" },
]
exclude = [
    "**/.coverage",
]

[tool.poetry.dependencies]
python = "^3.9"
rpmautospec_core = "^0.1.0"
rpmautospec = { git = "https://github.com/fedora-infra/rpmautospec.git", branch = "main" }
koji = "^1.33.0"
ruff = "^0.1.14 || ^0.2.0 || ^0.3.0 || ^0.4.0 || ^0.5.0 || ^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2 || ^7 || ^8.0.0"
pytest-cov = "^4.0.0 || ^5.0.0"

[tool.black]
line_length = 100

[tool.pytest.ini_options]
addopts = "--cov --cov-config .coveragerc --cov-report term --cov-report xml --cov-report html"

[tool.ruff]
line-length = 100
